--- a/src/components/organization/organization.module.css
+++ b/src/components/organization/organization.module.css
@@ -2,6 +2,7 @@
     margin-bottom: 16px;
     padding-top: 7px;
     padding-left: 19px;
+    padding-right: 5px;
 }
 
 .container:hover {
@@ -11,7 +12,6 @@
 .wrapper {
     display: flex;
     justify-content: space-between;
-    max-width: 200px;
 }
 
 
