--- a/src/components/organization/organization.module.css
+++ b/src/components/organization/organization.module.css
@@ -11,7 +11,32 @@
 
 .wrapper {
     display: flex;
-    justify-content: space-between;
+} 
+
+.inn {
+    margin-right:15px;
 }
 
 
+.modal {
+  font-size: 12px;
+}
+
+.modal > .content {
+  width: 100%;
+  padding: 10px 5px;
+}
+
+.modal > .close {
+  cursor: pointer;
+  position: absolute;
+  display: block;
+  padding: 2px 5px;
+  line-height: 20px;
+  right: -10px;
+  top: -10px;
+  font-size: 24px;
+  background: #ffffff;
+  border-radius: 18px;
+  border: 1px solid #cfcece;
+}
