--- a/src/components/nav-tabs/nav-tabs.module.css
+++ b/src/components/nav-tabs/nav-tabs.module.css
@@ -8,15 +8,24 @@
     background-color:#E5E5E5;
     border:none;
 }
-.btnText {
+.text {
     color: #B9B9B9;
 }
 .activeBtn {
     font-weight: bold;
     border-top: 2px solid #F50634;
     background-color:#FFFFFF;
+    outline: none;
+}
+.btn:active, .btn:focus { outline: none; }
+
+.activeText {
+    color: #2B2829;
 }
 
-.activeBtnText {
-    color: #2B2829
+.savedOrganizationsLength {
+    color: #2B2829;
+}
+.activeSavedOrganizationsLength {
+    color:#F50634;
 }
