--- a/src/components/app/app.css
+++ b/src/components/app/app.css
@@ -1,38 +1,78 @@
 body {
-    margin:0;
-    padding:0;
-    font-family: "Lato";
-    font-size: 12px;
-    line-height: 23px;
-    background-color:#E5E5E5;
+  margin: 0;
+  padding: 0;
+  font-family: 'PT Sans', sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 12px;
+  line-height: 23px;
+  background-color: #E5E5E5;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
 }
 
 html {
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-  }
-  *, *:before, *:after {
-    -webkit-box-sizing: inherit;
-    -moz-box-sizing: inherit;
-    box-sizing: inherit;
-    }
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
 
-.pages-container {
-  max-width: 736px;
+*,
+*:before,
+*:after {
+  -webkit-box-sizing: inherit;
+  -moz-box-sizing: inherit;
+  box-sizing: inherit;
+}
+
+.app-container {
+  width: 736px;
   margin: 0 auto;
 }
-
-.app-title {
-margin-bottom: 34px;
-font-size: 40px;
-line-height: 49px;
-color: #2B2829;
-}
-
-.pages-content-container {
+.pages-container {
+  width: 736px;
   min-height: 568px;
-  padding:32px 24px;
+  padding: 30px 24px;
   margin-bottom: 203px;
   background-color: #FFFFFF;
 }
+
+
+.app-title {
+  margin:0;
+  margin-bottom: 30px;
+  font-size: 40px;
+  line-height: 49px;
+  color: #2B2829;
+}
+
+.pages-content-container { 
+   position: relative;
+}
+
+.page {
+  position: absolute;
+}
+
+.page-enter {
+  opacity: 0;
+}
+
+.page-enter-active {
+  opacity: 1;
+  transition: opacity 200ms ease-in, 
+}
+
+.page-exit {
+  opacity: 1;
+}
+
+.page-exit-active {
+  opacity: 0;
+  transition: opacity 200ms ease-in, 
+}
+
+
