--- a/src/components/search-panel/search-panel.module.css
+++ b/src/components/search-panel/search-panel.module.css
@@ -1,8 +1,7 @@
 .searchPanel {
 width: 688px;
-height: 46px;
 padding-top:13px;
-padding-bottom:6px;
+padding-bottom:13px;
 padding-left:16px;
 background: #FFFFFF;
 border: 1px solid #E5E5E5;
@@ -14,8 +13,7 @@ border-radius: 3px;
     border: 1px solid #FAE29F;
 }
 
-
-.text {
+.prePanelText {
 margin:0;
 margin-bottom:3px;
 padding:0;
