pesisting data to Local Storage with throttle fix

--- a/src/components/organization-list-item/organization-list-item.module.css
+++ b/src/components/organization-list-item/organization-list-item.module.css
@@ -39,6 +39,10 @@
   line-height: 140%;
 }
 
+.orgInn {
+  margin-right:5px;
+}
+
 .savedOrganizationListOrgNameText {
   font-size: 18px;
   line-height: 188.55%;
