--- a/src/components/app-header/app-header.module.css
+++ b/src/components/app-header/app-header.module.css
@@ -4,8 +4,8 @@
 }
 
 .container {
-    max-width:1040px;
-    padding: 14px 0px;
+    width: 736px;
+    padding: 14px 20px;
     margin:0 auto;
 }
 
