--- a/src/components/app/app.css
+++ b/src/components/app/app.css
@@ -1,6 +1,7 @@
 body {
   margin: 0;
   padding: 0;
+  min-width: 768px;
   font-family: 'PT Sans', sans-serif;
   font-style: normal;
   font-weight: normal;
@@ -32,14 +33,14 @@ html {
   width: 736px;
   margin: 0 auto;
 }
+
 .pages-container {
   width: 736px;
   min-height: 568px;
-  padding: 30px 24px;
+  padding: 30px 20px;
   margin-bottom: 203px;
   background-color: #FFFFFF;
 }
-
 
 .app-title {
   margin:0;
@@ -49,7 +50,7 @@ html {
   color: #2B2829;
 }
 
-.pages-content-container { 
+.pages-positioning-container { 
    position: relative;
 }
 
@@ -74,5 +75,3 @@ html {
   opacity: 0;
   transition: opacity 200ms ease-in, 
 }
-
-
