--- a/src/components/app/app.css
+++ b/src/components/app/app.css
@@ -1,13 +1,15 @@
+@import-normalize;
+
 body {
   margin: 0;
   padding: 0;
   min-width: 768px;
-  font-family: 'PT Sans', sans-serif;
+  font-family: "PT Sans", sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 12px;
   line-height: 23px;
-  background-color: #E5E5E5;
+  background-color: #e5e5e5;
 }
 
 img {
@@ -39,19 +41,19 @@ html {
   min-height: 568px;
   padding: 30px 20px;
   margin-bottom: 203px;
-  background-color: #FFFFFF;
+  background-color: #ffffff;
 }
 
 .app-title {
-  margin:0;
+  margin: 0;
   margin-bottom: 30px;
   font-size: 40px;
   line-height: 49px;
-  color: #2B2829;
+  color: #2b2829;
 }
 
-.pages-positioning-container { 
-   position: relative;
+.pages-positioning-container {
+  position: relative;
 }
 
 .page {
@@ -64,7 +66,7 @@ html {
 
 .page-enter-active {
   opacity: 1;
-  transition: opacity 200ms ease-in, 
+  transition: opacity 200ms ease-in;
 }
 
 .page-exit {
@@ -73,5 +75,5 @@ html {
 
 .page-exit-active {
   opacity: 0;
-  transition: opacity 200ms ease-in, 
+  transition: opacity 200ms ease-in;
 }
