--- a/src/components/error-indicator/error-indicator.module.css
+++ b/src/components/error-indicator/error-indicator.module.css
@@ -1,14 +1,13 @@
-
 .messageWrapper {
-    width:300px;
-    margin: 0 auto;
-    margin-top:20px;
-    text-align: center;
-    font-size: 14px;
-    line-height: 21px;
+  width: 300px;
+  margin: 0 auto;
+  margin-top: 20px;
+  text-align: center;
+  font-size: 14px;
+  line-height: 21px;
 }
 
 .title {
-    margin:0;
-    color: rgb(255,0,0);
+  margin: 0;
+  color: rgb(255, 0, 0);
 }
